Updated index.html with recent changes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Raviteja Bommireddy - AI Researcher & Data Scientist</title>
     <meta name="description" content="Personal website of Raviteja Bommireddy, Research Assistant specializing in multilingual NLP, computer vision, and AI applications.">
-    <meta name="keywords" content="AI, Machine Learning, NLP, Computer Vision, Data Science, Research">
+    <meta name="keywords" content="AI, NLP, Machine Learning, Data Science, Research">
     <meta name="author" content="Raviteja Bommireddy">
     
     <!-- Favicon -->
@@ -54,9 +54,7 @@
                     <div class="hero-text">
                         <h1 class="hero-title">Raviteja Bommireddy</h1>
                         <p class="hero-description">
-                            B.Tech Computer Science with AI specialization at IIITDM Kancheepuram. Passionate about multilingual
-                            NLP, LLMs, ML and building AI solutions that bridge linguistic divides and serve
-                            underrepresented communities.
+                        I’m a **Bachelors** student in **Artificial Intelligence** at **IIITDM Kancheepuram**. I’m deeply engaged in **research**, focusing on areas like **trustworthy AI**, **NLP**, **Knowledge-infused AI**, and **ML**. My aim is to develop AI systems that are impactful, ethical, and aligned with human values.
                         </p>
                     </div>
                     <div class="hero-buttons">
@@ -64,11 +62,11 @@
                             <i data-lucide="mail"></i>
                             Email
                         </a>
-                        <a href="tel:+919391985287" class="btn btn-outline">
-                            <i data-lucide="phone"></i>
-                            Phone
+                        <a href="https://scholar.google.com/citations?user=x5ZUG9AAAAAJ&hl=en" class="btn btn-outline">
+                            <i data-lucide="book"></i>
+                            Google Scholar
                         </a>
-                        <a href="https://linkedin.com/in/raviteja-bommireddy" target="_blank" class="btn btn-outline">
+                        <a href="https://www.linkedin.com/in/raviteja-bommireddy-4338b2286/" target="_blank" class="btn btn-outline">
                             <i data-lucide="linkedin"></i>
                             LinkedIn
                         </a>
