--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@ body {
                     <div class="hero-text">
                         <h1 class="hero-title">Raviteja Bommireddy</h1>
                         <p class="hero-description">
-                        I’m a **Bachelors** student in **Artificial Intelligence** at **IIITDM Kancheepuram**. I’m deeply engaged in **research**, focusing on areas like **trustworthy AI**, **NLP**, **Knowledge-infused AI**, and **ML**. My aim is to develop AI systems that are impactful, ethical, and aligned with human values.
+                        I’m a Bachelors student in Artificial Intelligence at IIITDM Kancheepuram. I’m deeply engaged in research, focusing on areas like trustworthy AI, NLP, Knowledge-infused AI, and ML. My aim is to develop AI systems that are impactful, ethical, and aligned with human values.
                         </p>
                     </div>
                     <div class="hero-buttons">
@@ -1304,23 +1304,18 @@ body {
                     <h2 class="section-title">About Me</h2>
                     <div class="about-text">
                         <p>
-                            My fascination with how language and data shape human understanding has always guided me. I find joy not
-                            just in building models, but in uncovering insights, solving meaningful problems, and exploring the
-                            unknown. It is this curiosity, not titles or accolades, that drives me.
+                            I am an Undergraduate Student in the Artificial Intelligence department at Indian Institute of Information Technology Kancheepuram <strong>(IIITDM)</strong>, focused on exploring research in Natural Language Processing <strong>(NLP)</strong>, Large Language Models <strong>(LLMs)</strong>, Machine Learning <strong>(ML)</strong>.
                         </p>
                         <p>
-                            Currently working as a Research Assistant at IIITDM Kancheepuram, I'm developing a multi-modal fake news
-                            detection model that integrates text and image data across 10+ Indian regional languages. This work has
-                            shown me that data science is not just about performance, but also about representation, accessibility,
-                            and responsibility.
+                            My research focuses on grounding language models through retrieval, attribution, reasoning, while integrating multimedia elements to enrich the learning process. I am particularly interested in AI research that leverages knowledge-infused learning, to construct context that can be used effectively in generation, decision-making, and task-oriented agents for social good applications, improving societal impacts.
                         </p>
                         <p>
-                            I believe technology should adapt to people, not the other way around. My goal is to develop tools that
-                            empower speakers of underrepresented languages and bridge linguistic divides in AI systems.
+                            Currently I am working as a Research Assistant at <a href="https://kai2umbc.github.io/" target="_blank">KAI² lab at UMBC</a>. As my specific research interests are still shaping up to a solid niche domain, I am always open to discuss new exciting ideas to work collaboratively in areas like <strong>NLP</strong>, <strong>LLM</strong>, <strong>VLM</strong>, <strong>ML</strong>, and broadly AI which helps social good.
                         </p>
                     </div>
                 </div>
             </div>
+
 
             
             <!-- News & Updates Timeline -->
