--- a/index.html
+++ b/index.html
@@ -1271,7 +1271,7 @@ body {
                     <div class="hero-text">
                         <h1 class="hero-title">Raviteja Bommireddy</h1>
                         <p class="hero-description">
-                        I’m a Bachelors student in Artificial Intelligence at IIITDM Kancheepuram. I’m deeply engaged in research, focusing on areas like trustworthy AI, NLP, Knowledge-infused AI, and ML. My aim is to develop AI systems that are impactful, ethical, and aligned with human values.
+                        I’m a Bachelors student in Artificial Intelligence at IIITDM Kancheepuram. I’m deeply engaged in research, focusing on areas like trustworthy AI, NLP, Knowledge-infused AI, and ML. My aim is to develop AI systems that are impactful, ethical, and aligned with human values in my next 7 years of time.
                         </p>
                     </div>
                     <div class="hero-buttons">
@@ -1323,27 +1323,33 @@ body {
                 <h2 class="section-subtitle">News & Updates</h2>
                 <div class="timeline">
                     <div class="timeline-item">
-                        <div class="timeline-date">Nov 3, 2025</div>
+                        <div class="timeline-date">Oct 5, 2025</div>
                         <div class="timeline-content">
-                            Presented our paper "Follow the Flow: Fine-grained Flowchart Attribution with Neurosymbolic Agents" at EMNLP 2025, main conference!
+                            Our Survey paper "Graph-Based Agentic Retrieval-Augmented Generation: A Comprehensive Survey" was released, have a look into it.
                         </div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-date">Aug 28, 2025</div>
+                        <div class="timeline-date">Sep 21, 2025</div>
                         <div class="timeline-content">
-                            I gave a talk at Adobe World HQ, San Jose, titled "Fine-grained Visual Attribution".
+                            Our paper "Generation-Time vs. Post-hoc Citation: A Holistic Evaluation of LLM Attribution" accepted at NeurIPS LLM Evaluation Workshop 2025!
                         </div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-date">Aug 20, 2025</div>
+                        <div class="timeline-date">Jul 16, 2025</div>
                         <div class="timeline-content">
-                            Our paper "Follow the Flow: Fine-grained Flowchart Attribution with Neurosymbolic Agents" was accepted at EMNLP 2025, main conference!
+                            I have joined as a Research Assistant at University of Maryland, Baltimore County (UMBC) in KAI2 Lab under supervision of Dr. Manas Gaur.
                         </div>
                     </div>
                     <div class="timeline-item">
-                        <div class="timeline-date">May 29, 2025</div>
+                        <div class="timeline-date">March, 2025</div>
                         <div class="timeline-content">
-                            I have joined Amazon as an Applied Scientist Intern in the agentic developer tools team (Amazon Q).
+                            I have joined as a Research Intern at Carnegie Mellon University in Neural Dynamics and Computation Group.
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-date">March, 2024</div>
+                        <div class="timeline-content">
+                            I have joined CipherByte Technologies as an Data Scientist Intern in the Data & Analytics team.
                         </div>
                     </div>
                 </div>
