--- a/index.html
+++ b/index.html
@@ -1562,9 +1562,9 @@ body {
             <div class="hero-grid">
                 <div class="hero-content">
                     <div class="hero-text">
-                        <h1 class="hero-title">Raviteja Bommireddy</h1>
+                        <h1 class="hero-title">Hello and Welcome!</h1>
                         <p class="hero-description">
-                        I’m a Bachelors student in Artificial Intelligence at IIITDM Kancheepuram. I’m deeply engaged in research, focusing on areas like trustworthy AI, NLP, Knowledge-infused AI, and ML. My aim is to develop AI systems that are impactful, ethical, and aligned with human values in my next 7 years of time.
+                        I’m a Bachelors student in Artificial Intelligence department at IIITDM Kancheepuram. I’m deeply engaged in research, focusing on areas like trustworthy AI, Knowledge-infused AI, NLP, and ML. My aim is to develop AI systems that are impactful, ethical, and aligned with human values.
                         </p>
                     </div>
                     <div class="hero-buttons">
@@ -1603,7 +1603,7 @@ body {
                             My research focuses on grounding language models through retrieval, attribution, reasoning, while integrating multimedia elements to enrich the learning process. I am particularly interested in AI research that leverages knowledge-infused learning, to construct context that can be used effectively in generation, decision-making, and task-oriented agents for social good applications, improving societal impacts.
                         </p>
                         <p>
-                            Currently I am working as a Research Assistant at <a href="https://kai2umbc.github.io/" target="_blank">KAI² lab at UMBC</a>. As my specific research interests are still shaping up to a solid niche domain, I am always open to discuss new exciting ideas to work collaboratively in areas like <strong>NLP</strong>, <strong>LLM</strong>, <strong>VLM</strong>, <strong>ML</strong>, and broadly AI which helps social good.
+                            Currently I am working as a Research Assistant at <a href="https://kai2umbc.github.io/" target="_blank">KAI² lab at UMBC</a>. Previously, I worked on computational neuroscience as research intern at CMU. As my specific research interests are still shaping up to a solid niche domain, I am always open to discuss new exciting ideas to work collaboratively in areas like <strong>NLP</strong>, <strong>LLM</strong>, <strong>VLM</strong>, <strong>ML</strong>, and broadly AI which helps social good.
                         </p>
                     </div>
                 </div>
@@ -1625,6 +1625,12 @@ body {
                         <div class="timeline-date">Sep 21, 2025</div>
                         <div class="timeline-content">
                             Our paper "Generation-Time vs. Post-hoc Citation: A Holistic Evaluation of LLM Attribution" accepted at NeurIPS LLM Evaluation Workshop 2025!
+                        </div>
+                    </div>
+                    <div class="timeline-item">
+                        <div class="timeline-date">Aug, 2025</div>
+                        <div class="timeline-content">
+                            Concluded my research internship at CMU, focusing on challenging computational neuroscience and a huge learning experience!
                         </div>
                     </div>
                     <div class="timeline-item">
